animated custom property does not change value when animation is rendered #63548

Closed
opened 2019-04-13 00:33:45 +02:00 by Hans Baier · 12 comments

System Information
Operating system: Windows 10 Home 64 Bit
Graphics card: NVidia Geforce GTX 1050

Blender Version
Broken:
2.80-009dbc2bc9fb-win64

When running the attached .blend file the custom property 'CustomProperty' of object 'Cube'
is always zero during render, but it is animated to go from 0.0 to 1.0 with keyframes.
With a pre frame change handler I print out the value (and change the cube material according to it),
and during render the value is always the last one dependeing on the frame currently selected in the scene.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Load the attached .blend file
RenderNotAnimatedBug.blend

Make sure the script is executed at least once
open the system console
play animation to make sure the custom property of Cube is updated (Cube also changes color according to property).
Press Ctrl+F12 to render animation
Verify in the system console that custom property is not updated and sticks to last selected frame value.

**System Information** Operating system: Windows 10 Home 64 Bit Graphics card: NVidia Geforce GTX 1050 **Blender Version** Broken: 2.80-009dbc2bc9fb-win64 When running the attached .blend file the custom property 'CustomProperty' of object 'Cube' is always zero during render, but it is animated to go from 0.0 to 1.0 with keyframes. With a pre frame change handler I print out the value (and change the cube material according to it), and during render the value is always the last one dependeing on the frame currently selected in the scene. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Load the attached .blend file [RenderNotAnimatedBug.blend](https://archive.blender.org/developer/F6937299/RenderNotAnimatedBug.blend) Make sure the script is executed at least once open the system console play animation to make sure the custom property of Cube is updated (Cube also changes color according to property). Press Ctrl+F12 to render animation Verify in the system console that custom property is not updated and sticks to last selected frame value.
Author

Added subscriber: @hansfbaier

Added subscriber: @hansfbaier

#63549 was marked as duplicate of this issue

#63549 was marked as duplicate of this issue

Added subscribers: @angavrilov, @ZedDB

Added subscribers: @angavrilov, @ZedDB
Alexander Gavrilov was assigned by Sebastian Parborg 2019-04-14 13:26:56 +02:00

@angavrilov do you want to take a look at the cause of this?

@angavrilov do you want to take a look at the cause of this?
Alexander Gavrilov removed their assignment 2019-04-16 13:53:37 +02:00

By all looks this seems to be a depsgraph / COW / Python API issue, not related to animation as such.

By all looks this seems to be a depsgraph / COW / Python API issue, not related to animation as such.

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi
Sergey Sharybin was assigned by Sebastian Parborg 2019-07-04 10:15:21 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey do you want to take a look at this?

@Sergey do you want to take a look at this?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

What happens here is that you're accessing property from an original datablock, but it's actual value is only known at the evaluated version.

It is now possible to access evaluated datablock, read property value from it and modify original datablock based on that.

Attached modified version of the script to illustrate the difference.
RenderNotAnimatedBug_FIXED.blend

See https://wiki.blender.org/wiki/Reference/Release_Notes/2.81/Python_API#Handlers for more details.

What happens here is that you're accessing property from an original datablock, but it's actual value is only known at the evaluated version. It is now possible to access evaluated datablock, read property value from it and modify original datablock based on that. Attached modified version of the script to illustrate the difference. [RenderNotAnimatedBug_FIXED.blend](https://archive.blender.org/developer/F7734445/RenderNotAnimatedBug_FIXED.blend) See https://wiki.blender.org/wiki/Reference/Release_Notes/2.81/Python_API#Handlers for more details.

Added subscriber: @ichlubna

Added subscriber: @ichlubna

@Sergey Can be similar principle used for custom compositor node properties? The problem sounds quite similar.

@Sergey Can be similar principle used for custom compositor node properties? The problem sounds quite similar.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63548
No description provided.