source/blender/blenkernel/BKE_callbacks.h
@@ -21,8 +21,10 @@
 #ifndef __BKE_CALLBACKS_H__
 #define __BKE_CALLBACKS_H__
 
+struct Depsgraph;
 struct ID;
 struct Main;
+struct PointerRNA;
 
 /**
  * Common suffix uses:
@@ -59,12 +61,21 @@ typedef enum {
 
 typedef struct bCallbackFuncStore {
   struct bCallbackFuncStore *next, *prev;
-  void (*func)(struct Main *, struct ID *, void *arg);
+  void (*func)(struct Main *, struct PointerRNA **, const int num_pointers, void *arg);
   void *arg;
   short alloc;
 } bCallbackFuncStore;
 
-void BKE_callback_exec(struct Main *bmain, struct ID *self, eCbEvent evt);
+void BKE_callback_exec(struct Main *bmain,
+                       struct PointerRNA **pointers,
+                       const int num_pointers,
+                       eCbEvent evt);
+void BKE_callback_exec_null(struct Main *bmain, eCbEvent evt);
+void BKE_callback_exec_id(struct Main *bmain, struct ID *id, eCbEvent evt);
+void BKE_callback_exec_id_depsgraph(struct Main *bmain,
+                                    struct ID *id,
+                                    struct Depsgraph *depsgraph,
+                                    eCbEvent evt);
 void BKE_callback_add(bCallbackFuncStore *funcstore, eCbEvent evt);
 
 void BKE_callback_global_init(void);
